--- a/app/src/main/res/layout/activity_view_or_delete_image.xml
+++ b/app/src/main/res/layout/activity_view_or_delete_image.xml
@@ -41,6 +41,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
         android:src="@drawable/solar_eclipse_image" />
 
