24th commit. Stable (at times slow due to images) version. Video uploads from gallery supported. TODO: (1) improve speed of images (then images are finished). (2) new video creation support.

--- a/app/src/main/res/layout/activity_add_version.xml
+++ b/app/src/main/res/layout/activity_add_version.xml
@@ -143,13 +143,12 @@
                 android:textSize="17dp" />
 
             <LinearLayout
-                android:id="@+id/imageContainer"
+                android:id="@+id/idLytImageContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
                 android:layout_marginTop="5dp">
-
             </LinearLayout>
 
             <LinearLayout
@@ -185,9 +184,19 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:gravity="start"
-                android:text="@string/video"
+                android:text="@string/videos"
                 android:textColor="@color/standard_text_dark_grey"
                 android:textSize="17dp" />
+
+            <LinearLayout
+                android:id="@+id/idLytVideoContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="5dp">
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
