--- a/app/src/main/res/layout/activity_view_version.xml
+++ b/app/src/main/res/layout/activity_view_version.xml
@@ -131,13 +131,33 @@
                 android:textSize="17dp" />
 
             <LinearLayout
-                android:id="@+id/imageContainer"
+                android:id="@+id/idLytImageContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
                 android:layout_marginTop="5dp">
+            </LinearLayout>
 
+            <TextView
+                android:id="@+id/idTxtVideosHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/videos"
+                android:textColor="@color/standard_text_dark_grey"
+                android:textSize="17dp" />
+
+            <LinearLayout
+                android:id="@+id/idLytVideoContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="5dp">
             </LinearLayout>
 
         </LinearLayout>
