--- a/app/src/main/res/layout/activity_add_version.xml
+++ b/app/src/main/res/layout/activity_add_version.xml
@@ -60,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/edit_text_shape_orange"
