--- a/app/src/main/res/layout/activity_add_version.xml
+++ b/app/src/main/res/layout/activity_add_version.xml
@@ -9,7 +9,7 @@
     tools:context=".AddVersionActivity">
 
     <ImageView
-        android:id="@+id/lyricistImage"
+        android:id="@+id/idImgLyricist"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
@@ -23,14 +23,14 @@
         android:id="@+id/idTxtSongName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lyricistImage"
+        android:layout_below="@+id/idImgLyricist"
         android:layout_marginTop="14dp"
         android:gravity="center"
         android:text="@string/song_name"
         android:textColor="@color/highlighted_text_yellow"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
+        app:layout_constraintTop_toBottomOf="@+id/idImgLyricist" />
 
     <ScrollView
         android:id="@+id/scrollView1"
