--- a/app/src/main/res/layout/activity_delete_song_or_version.xml
+++ b/app/src/main/res/layout/activity_delete_song_or_version.xml
@@ -9,7 +9,7 @@
     tools:context=".EditSongActivity">
 
     <ImageView
-        android:id="@+id/lyricistImage"
+        android:id="@+id/idImgLyricist"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
@@ -23,14 +23,14 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lyricistImage"
+        android:layout_below="@+id/idImgLyricist"
         android:layout_marginTop="14dp"
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/highlighted_text_orange"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
+        app:layout_constraintTop_toBottomOf="@+id/idImgLyricist" />
 
     <TextView
         android:id="@+id/idTxtSongOrVersionName"
@@ -69,8 +69,8 @@
         android:clickable="true"
         android:contentDescription="@string/delete"
         android:scaleType="center"
-        app:fabCustomSize="57dp"
-        app:maxImageSize="38dp"
+        app:fabCustomSize="58dp"
+        app:maxImageSize="41dp"
         app:srcCompat="@drawable/delete_explosion_icon" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
