--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/lyricistImage"
+        android:id="@+id/idImgLyricist"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
@@ -20,23 +20,23 @@
         app:layout_constraintTop_toBottomOf="parent" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/idTxtLyricistHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lyricistImage"
+        android:layout_below="@+id/idImgLyricist"
         android:layout_marginTop="14dp"
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/highlighted_text_orange"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
+        app:layout_constraintTop_toBottomOf="@+id/idImgLyricist" />
 
     <EditText
         android:id="@+id/idEdtSearchSongs"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/idTxtLyricistHeader"
         android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="10dp"
@@ -54,7 +54,7 @@
         android:layout_below="@+id/idEdtSearchSongs"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        app:layout_constraintTop_toBottomOf="@+id/idTxtLyricistHeader" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnAddSong"
