--- a/app/src/main/res/layout/activity_view_or_delete_video.xml
+++ b/app/src/main/res/layout/activity_view_or_delete_video.xml
@@ -9,7 +9,7 @@
     tools:context=".AddSongActivity">
 
     <ImageView
-        android:id="@+id/lyricistImage"
+        android:id="@+id/idImgLyricist"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
@@ -23,14 +23,14 @@
         android:id="@+id/idTxtSongName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lyricistImage"
+        android:layout_below="@+id/idImgLyricist"
         android:layout_marginTop="14dp"
         android:gravity="center"
         android:text="@string/song_name"
         android:textColor="@color/highlighted_text_yellow"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
+        app:layout_constraintTop_toBottomOf="@+id/idImgLyricist" />
 
     <LinearLayout
         android:id="@+id/idLytVideoContainer"
@@ -60,9 +60,9 @@
         android:layout_marginBottom="20dp"
         android:clickable="true"
         android:contentDescription="@string/delete"
-        app:fabCustomSize="57dp"
+        app:fabCustomSize="58dp"
         android:scaleType="center"
-        app:maxImageSize="38dp"
+        app:maxImageSize="41dp"
         app:srcCompat="@drawable/delete_explosion_icon" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
