--- a/app/src/main/res/layout/activity_add_song.xml
+++ b/app/src/main/res/layout/activity_add_song.xml
@@ -59,7 +59,7 @@
         app:fabCustomSize="57dp"
         android:scaleType="center"
         app:maxImageSize="45dp"
-        app:srcCompat="@drawable/confirm_icon" />
+        app:srcCompat="@drawable/next_tick_icon_black" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnBackToHome"
@@ -70,8 +70,8 @@
         android:clickable="true"
         android:contentDescription="@string/back_to_home"
         android:scaleType="center"
-        app:maxImageSize="32dp"
-        app:srcCompat="@drawable/back_arrow_icon"
+        app:maxImageSize="47dp"
+        app:srcCompat="@drawable/back_arrow_icon_black"
         app:backgroundTint="@color/back_button"/>
 
 </RelativeLayout>
