--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="10dp"
-        android:drawableLeft="@drawable/search_icon"
+        android:drawableLeft="@drawable/search_hollow_icon_orange"
         android:drawablePadding="8dp"
         android:hint="@string/search_songs"
         android:background="@drawable/edit_text_shape_grey"
@@ -68,7 +68,7 @@
         android:contentDescription="@string/add_new_song"
         app:fabCustomSize="57dp"
         android:scaleType="center"
-        app:maxImageSize="45dp"
-        app:srcCompat="@drawable/add_icon" />
+        app:maxImageSize="40dp"
+        app:srcCompat="@drawable/add_icon_black" />
 
 </RelativeLayout>
