--- a/app/src/main/res/layout/activity_view_song_and_versions.xml
+++ b/app/src/main/res/layout/activity_view_song_and_versions.xml
@@ -53,8 +53,8 @@
         android:contentDescription="@string/add_new_version"
         app:fabCustomSize="57dp"
         android:scaleType="center"
-        app:maxImageSize="45dp"
-        app:srcCompat="@drawable/add_icon" />
+        app:maxImageSize="40dp"
+        app:srcCompat="@drawable/add_icon_black" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnEditSong"
@@ -67,8 +67,8 @@
         android:clickable="true"
         android:contentDescription="@string/edit"
         app:fabCustomSize="59dp"
-        app:maxImageSize="30dp"
-        app:srcCompat="@drawable/edit_icon"
+        app:maxImageSize="38dp"
+        app:srcCompat="@drawable/edit_icon_black"
         app:backgroundTint="@color/back_button" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -80,8 +80,8 @@
         android:clickable="true"
         android:contentDescription="@string/back_to_home"
         android:scaleType="center"
-        app:maxImageSize="32dp"
-        app:srcCompat="@drawable/back_arrow_icon"
+        app:maxImageSize="47dp"
+        app:srcCompat="@drawable/back_arrow_icon_black"
         app:backgroundTint="@color/back_button"/>
 
 </RelativeLayout>
