--- a/app/src/main/res/layout/activity_view_version.xml
+++ b/app/src/main/res/layout/activity_view_version.xml
@@ -175,9 +175,8 @@
         android:clickable="true"
         android:contentDescription="@string/edit"
         app:fabCustomSize="59dp"
-        app:maxImageSize="30dp"
-        app:srcCompat="@drawable/edit_icon"
-        app:backgroundTint="@color/back_button" />
+        app:maxImageSize="38dp"
+        app:srcCompat="@drawable/edit_icon_black"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnBackToSongAndVersions"
@@ -188,8 +187,8 @@
         android:clickable="true"
         android:contentDescription="@string/back"
         android:scaleType="center"
-        app:maxImageSize="32dp"
-        app:srcCompat="@drawable/back_arrow_icon"
+        app:maxImageSize="47dp"
+        app:srcCompat="@drawable/back_arrow_icon_black"
         app:backgroundTint="@color/back_button"/>
 
 </RelativeLayout>
