31st commit. Stable version. Images changed in welcome and instructions screens. High quality audio recording fully supported. TODO next: last big task, import gallery recordings.

--- a/app/src/main/res/layout/activity_add_version.xml
+++ b/app/src/main/res/layout/activity_add_version.xml
@@ -237,6 +237,16 @@
                 android:textSize="17dp" />
 
             <LinearLayout
+                android:id="@+id/idLytRecordingContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="5dp">
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
