--- a/app/src/main/res/layout/activity_record_or_play_audio.xml
+++ b/app/src/main/res/layout/activity_record_or_play_audio.xml
@@ -39,10 +39,20 @@
         android:layout_centerVertical="true" >
 
         <TextView
+            android:id="@+id/idTxtTimer"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:textColor="@color/color_accent_grey"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/idTxtHeader"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="center"
+            android:layout_marginBottom="5dp"
             android:text="@string/start_recording_message"
             android:textColor="@color/highlighted_text_yellow"
             android:textSize="20sp"
